# lx16a

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _build.sh  configure.sh  run.sh
include/: lx16a.hpp
src/: CMakeLists.txt  lx16a.cpp  lx16a.hpp
tests/: hhm_test.cpp  proof_of_concept.cpp  test.cpp
tests/basic_test/: CMakeLists.txt
tests/hhm/: CMakeLists.txt  hhm_test.cpp
tests/poc/: CMakeLists.txt  proof_of_concept.cpp
tests/test/: CMakeLists.txt
tests/unit/: CMakeLists.txt  unit_test.cpp
